Fix nav wrap

--- a/assets/style.css
+++ b/assets/style.css
@@ -433,7 +433,8 @@ img.avatar {
 }
 
 .nav {
-  display: inline-flex;
+  display: flex;
+  flex-wrap: wrap;
   gap: 20px;
   padding: 0px;
   box-sizing: border-box;
